* add privacy-policy info
* add projects report plots package and function
* add frameshift confirmation option for GISAID upload
* add cov tracker configuartion option and result page
* add GISAID/NCBI batch submit status check. append the exit screenshot to the log windown for submission 
* fix bug bioproject parsing error for SRA upload
* SRA download SRA/ENA inconsistency check with WARNING

## build 20210823
* update ENA portal api URL for metadata checking
* Add Pacbio support of ec-19
* Add Pacbio Freed (Midnight) primer bed for align_trim
* add annotation on amplicon_coverage plot (amplicov 0.3.1)
* filter length=0 from SRA download reads
* input duplicate id check
* update VOC and VOI
* check platform for batch submit
* update pangolin to 3.1.11
* add guest account log option


## build 20210713
* variant call using default diploid mode, add VCF QUAL filter
* add rerun pangolin lineage assignment function in project action widget
* update VOC and VOI
* update pangolin to 3.1.5 and its dependencies
* add artic protocol primer scheme v4 for align_trim
* SNV_report and INDEL_report display in pop up table
* fix bug: align_trim deal with short amplicon and off by 1 issue
* fix bug: deletion check condition. at least covTresh on previous delete event
* fix bug: consensus off by 1 bug when deletion detected after any insertion event. 

## build 20210607
* add early stop codon aa substitution warning
* add ampliseq adapter
* add aligntrim info on header of result section
* update NCBI batch submitter: add auto-delete option
* Align_trim deal with amplicon_size < read length
* add confirmation pop up before gisaid/genbank submission
* fix genome/sra submission. run in background
* fix empty sample_title when performing SRA submssion
* update Pangolin to 3.0.3 and add its dependencies 
* add metadata input for batch submit, update example EXCEL file with
instructions
* add small test dataset for covid19