@@ -133,6 +133,12 @@
 								</select>
 							</div>
 							<div class="ui-field-contain">
+								<label for="metadata-sample-vaccine-received">Vaccine received</label>
+								<input name="metadata-sample-vaccine-received" id="metadata-sample-vaccine-received" type="text"
+									value="<TMPL_VAR NAME=SM_VACCINE_RECEIVED DEFAULT=>"
+									placeholder="Example: Pfizer 20210620" class="metadata-input">
+							</div>
+							<div class="ui-field-contain">
 								<label for="metadata-sample-sequencing-tech2">Sequencing technology</label>
 								<input name="metadata-sample-sequencing-tech" id="metadata-sample-sequencing-tech2" type="text"
 									value="<TMPL_VAR NAME=SM_SEQUENCING_TECH DEFAULT=>"
