@@ -9,6 +9,8 @@
 * add GISAID/NCBI batch submit status check. append the exit screenshot to the log windown for submission 
 * fix bug bioproject parsing error for SRA upload
 * SRA download SRA/ENA inconsistency check with WARNING
+* Update VOC/VOI/VUM
+* Add vaccine received metadata field
 
 ## build 20210823
 * update ENA portal api URL for metadata checking
